feat: copy function for <space> from <enter>

--- a/nsxiv.1
+++ b/nsxiv.1
@@ -136,7 +136,7 @@ Prefix the next command with a number (denoted via
 .B q
 Quit nsxiv.
 .TP
-.B Return
+.BR Return ", " Space
 Switch to thumbnail mode / open selected image in image mode.
 .TP
 .B f
@@ -245,12 +245,12 @@ The following keyboard commands are only available in image mode:
 .TP
 Navigate image list:
 .TP
-.BR n ", " Space
+.B n
 Go
 .I count
 images forward.
 .TP
-.BR p ", " Backspace
+.B p
 Go
 .I count
 images backward.
