feat: update configuration and manpage to v31

--- a/nsxiv.1
+++ b/nsxiv.1
@@ -1,9 +1,9 @@
 .TH NSXIV 1 nsxiv\-VERSION
 .SH NAME
-nsxiv \- Simple X Image Viewer
+nsxiv \- Neo Simple X Image Viewer
 .SH SYNOPSIS
 .B nsxiv
-.RB [ \-abcfhiopqrtvZ ]
+.RB [ \-abcfhiopqrtvZ0 ]
 .RB [ \-A
 .IR FRAMERATE ]
 .RB [ \-e
@@ -14,8 +14,6 @@ nsxiv \- Simple X Image Viewer
 .IR GEOMETRY ]
 .RB [ \-N
 .IR NAME ]
-.RB [ \-T
-.IR TITLE ]
 .RB [ \-n
 .IR NUM ]
 .RB [ \-S
@@ -32,102 +30,103 @@ It has two modes of operation: image and thumbnail mode. The default is image
 mode, in which only the current image is shown. In thumbnail mode a grid of
 small previews is displayed, making it easy to choose an image to open.
 .P
-Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
+Please note, that the fullscreen mode requires an EWMH/NetWM-compliant window
 manager.
 .SH OPTIONS
 .TP
-.BI "\-A " FRAMERATE
+.BI "\-A, \-\-framerate " FRAMERATE
 Play animations with a constant frame rate set to
 .IR FRAMERATE .
 .TP
-.B \-a
+.B "\-a, \-\-animate"
 Play animations of multi-frame images.
 .TP
-.B \-b
-Do not show info bar on bottom of window.
+.B "\-b, \-\-no\-bar"
+Do not show statusbar at the bottom of the window.
 .TP
-.B \-c
+.B "\-c, \-\-clean\-cache"
 Remove all orphaned cache files from the thumbnail cache directory and exit.
 .TP
-.BI "\-e " WID
+.BI "\-e, \-\-embed " WID
 Embed nsxiv's window into window whose ID is
 .IR WID .
 .TP
-.B \-f
+.B "\-f, \-\-fullscreen"
 Start in fullscreen mode.
 .TP
-.BI "\-G " GAMMA
+.BI "\-G, \-\-gamma " GAMMA
 Set image gamma to GAMMA (\-32..32).
 .TP
-.BI "\-g " GEOMETRY
+.BI "\-g, \-\-geometry " GEOMETRY
 Set window position and size. See section GEOMETRY SPECIFICATIONS of X(7) for
 more information on GEOMETRY argument.
 .TP
-.BI "\-N " NAME
-Set the resource name of nsxiv's X window to NAME.
-.TP
-.BI "\-T " TITLE
-Set the window title to TITLE. Use the format `prefix:suffixmode'. Any string
-literal is accepted for prefix, and the format of suffixmode is:
-
-.EX
-    Value  Format
-    0      Empty
-    1      Basename of file
-    2      Full path to file
-.EE
-
-By defualt, prefix is set to "nsxiv - " and suffixmode is set to 1 (basename).
-.TP
-.BI "\-n " NUM
-Start at picture number NUM.
-.TP
-.B \-h
+.B "\-h, \-\-help"
 Print brief usage information to standard output and exit.
 .TP
-.B \-i
+.B "\-i, \-\-stdin"
 Read names of files to open from standard input. Also done if FILE is `-'.
 .TP
-.B \-o
+.BI "\-N, \-\-class " NAME
+Set the resource name (WM_CLASS) of nsxiv's X window to NAME.
+.TP
+.BI "\-n, \-\-start\-at " NUM
+Start at picture number NUM.
+.TP
+.B "\-o, \-\-stdout"
 Write list of all marked files to standard output when quitting. In combination
 with
-.B \-i
+.B "\-i, \-\-stdin"
 nsxiv can be used as a visual filter/pipe.
 .TP
-.B \-p
+.B "\-p, \-\-private"
 Enable private mode, in which nsxiv does not write any cache or temporary files.
 .TP
-.B \-q
-Be quiet, disable warnings to standard error stream.
+.B "\-q, \-\-quiet"
+Be quiet, and disable warnings to standard error stream.
 .TP
-.B \-r
+.B "\-r, \-\-recursive"
 Search the given directories recursively for images to view.
 .TP
-.BI "\-S " DELAY
+.BI "\-S, \-\-ss\-delay " DELAY
 Start in slideshow mode. Set the delay between images to
 .I DELAY
 seconds.
 .I DELAY
-may be a floating point number.
+may be a floating-point number.
 .TP
-.BI "\-s " MODE
+.BI "\-s, \-\-scale\-mode " MODE
 Set scale mode according to MODE character. Supported modes are: [d]own,
 [f]it, [F]ill, [w]idth, [h]eight.
 .TP
-.B \-t
+.B "\-t, \-\-thumbnail"
 Start in thumbnail mode.
 .TP
-.B \-v
+.B "\-v, \-\-version"
 Print version information to standard output and exit.
 .TP
-.B \-Z
+.B "\-Z, \-\-zoom\-100"
 The same as `\-z 100'.
 .TP
-.BI "\-z " ZOOM
+.BI "\-z, \-\-zoom " ZOOM
 Set zoom level to ZOOM percent.
+.TP
+.B "\-0, \-\-null"
+Use NULL-separator. With this option, output of \-o and file-list sent to the
+key-handler and the input of \-i will be separated by a NULL character.
+.TP
+.BI "\-\-anti\-alias" [=no]
+Enables anti-aliasing, when given
+.I no
+as an argument, disables it instead.
+.TP
+.BI "\-\-alpha\-layer" [=no]
+Enables checkerboard background for alpha layer, when given
+.I no
+as an argument, disables it instead.
 .SH KEYBOARD COMMANDS
 .SS General
-The following keyboard commands are available in both image and thumbnail mode:
+The following keyboard commands are available in both image and thumbnail modes:
 .TP
 .BR 0 \- 9
 Prefix the next command with a number (denoted via
@@ -143,7 +142,7 @@ Switch to thumbnail mode / open selected image in image mode.
 Toggle fullscreen mode.
 .TP
 .B b
-Toggle visibility of info bar on bottom of window.
+Toggle visibility of statusbar at the bottom of the window.
 .TP
 .B Ctrl-x
 Send the next key to the external key-handler. See section EXTERNAL KEY HANDLER
@@ -184,7 +183,7 @@ Zoom out.
 Mark/unmark the current image.
 .TP
 .B M
-Repeat last mark action on all images from the last marked/unmarked up to the
+Mark/unmark all images starting from the last marked/unmarked image up to the
 current one.
 .TP
 .B Ctrl-m
@@ -215,6 +214,26 @@ steps.
 .TP
 .B Ctrl-g
 Reset gamma correction.
+.TP
+.B [
+Decrease brightness correction by
+.I count
+steps.
+.TP
+.B ]
+Increase brightness correction by
+.I count
+steps.
+.TP
+.B (
+Decrease contrast by
+.I count
+steps.
+.TP
+.B )
+Increase contrast by
+.I count
+steps.
 .SS Thumbnail mode
 The following keyboard commands are only available in thumbnail mode:
 .TP
@@ -265,6 +284,9 @@ Go
 .I count
 * 10 images forward.
 .TP
+.B Ctrl-6
+Go to the previously viewed image.
+.TP
 Handle multi-frame images:
 .TP
 .B Ctrl-n
@@ -285,22 +307,22 @@ Panning:
 .BR h ", " Left
 Scroll image 1/5 of window width or
 .I count
-pixel left.
+pixels left.
 .TP
 .BR j ", " Down
 Scroll image 1/5 of window height or
 .I count
-pixel down.
+pixels down.
 .TP
 .BR k ", " Up
 Scroll image 1/5 of window height or
 .I count
-pixel up.
+pixels up.
 .TP
 .BR l ", " Right
 Scroll image 1/5 of window width or
 .I count
-pixel right.
+pixels right.
 .TP
 .B H
 Scroll to left image edge.
@@ -313,6 +335,9 @@ Scroll to top image edge.
 .TP
 .B L
 Scroll to right image edge.
+.TP
+.B z
+Scroll to image center.
 .TP
 Zooming:
 .TP
@@ -367,32 +392,55 @@ Toggle slideshow mode and/or set the delay between images to
 .I count
 seconds.
 .SH MOUSE COMMANDS
+.SS Thumbnail mode
+The following mouse mappings are available in thumbnail mode:
+.TP
+.B Button1
+Select the image. Goes into image mode if double\-clicked.
+.TP
+.B Button3
+Mark/unmark the image. Dragging while holding down Button3 will mark/unmark
+multiple images.
+.TP
+.B Button4
+Scroll up by one row.
+.TP
+.B Button5
+Scroll down by one row.
+.TP
+.B Ctrl-Button4
+Scroll up by one page.
+.TP
+.B Ctrl-Button5
+Scroll down by one page.
+.SS Image mode
 The following mouse mappings are available in image mode:
-.TP
-General:
-.TP
-.B Button2
-Switch to thumbnail mode.
-.TP
-Navigate image list:
 .TP
 .B Button3
 Go to the next image if the mouse cursor is in the right part of the window or
 to the previous image if it is in the left part.
 .TP
-Panning:
-.TP
 .B Button1
+Pan the image relative to the mouse cursor.
+.TP
+.B Ctrl-Button1
 Pan the image according to the mouse cursor position in the window while
 keeping this button pressed down.
 .TP
-Zooming:
+.B Button2
+Switch to thumbnail mode.
 .TP
-.B ScrollUp
+.B Button4
 Zoom in.
 .TP
-.B ScrollDown
+.B Button5
 Zoom out.
+.TP
+.B Ctrl-Button4
+Zoom in 3x faster.
+.TP
+.B Ctrl-Button5
+Zoom out 3x faster.
 .SH CONFIGURATION
 The following X resources are supported:
 .TP
@@ -406,25 +454,72 @@ Color of the window foreground
 Name of Xft bar font
 .TP
 .B bar.background
-Color of the bar background. Defaults to window.foreground
+Color of the bar background. Defaults to window.background
 .TP
 .B bar.foreground
-Color of the bar foreground. Defaults to window.background
+Color of the bar foreground. Defaults to window.foreground
 .TP
 .B mark.foreground
 Color of the mark foreground. Defaults to window.foreground
 .TP
 Please see xrdb(1) on how to change them.
-.SH STATUS BAR
-The information displayed on the left side of the status bar can be replaced
-with the output of a user-provided script, which is called by nsxiv whenever an
-image gets loaded. The path of this script is
-.I $XDG_CONFIG_HOME/nsxiv/exec/image-info
-and the arguments given to it are: 1) path to image file, 2) image width,
-3) image height.
+.SH WINDOW TITLE
+The window title can be replaced with the output of a user-provided script,
+which is called by nsxiv whenever any of the relevant information changes.
+The path of this script is
+.I $XDG_CONFIG_HOME/nsxiv/exec/win-title
+and the arguments given to it (where "Optional" arguments might be empty) are:
+.IP $1 4
+resolved absolute path of the current file
+.IP $2 4
+current file number
+.IP $3 4
+total file count
+.IP $4 4
+image width (Optional: Disabled on thumbnails mode)
+.IP $5 4
+image height (Optional: Disabled on thumbnails mode)
+.IP $6 4
+current zoom (Optional: Disabled on thumbnails mode)
+.P
+The term file is used rather than image as nsxiv does not precheck that the
+input files are valid images. Total file count may be different from the actual
+count of valid images.
 .P
 There is also an example script installed together with nsxiv as
-.IR PREFIX/share/nsxiv/exec/image-info .
+.IR EGPREFIX/win-title .
+.SH STATUS BAR
+The information displayed on the left side of the status bar can be replaced
+with the output of user-provided script.
+.P
+The script that is called by nsxiv whenever an image gets loaded is located at
+.I $XDG_CONFIG_HOME/nsxiv/exec/image-info
+and the arguments given to it are:
+.IP $1 4
+path to image file (as provided by the user)
+.IP $2 4
+image width
+.IP $3 4
+image height
+.IP $4 4
+fully resolved path to the image file
+.P
+In thumbnail mode, the script that is called is located at
+.I $XDG_CONFIG_HOME/nsxiv/exec/thumb-info
+and the arguments given to it are:
+.IP $1 4
+path to image file (as provided by the user)
+.IP $2 4
+empty
+.IP $3 4
+empty
+.IP $4 4
+fully resolved path to the image file
+.P
+There are also example scripts installed together with nsxiv as
+.IR EGPREFIX/image-info
+and
+.IR EGPREFIX/thumb-info .
 .SH EXTERNAL KEY HANDLER
 Additional external keyboard commands can be defined using a handler program
 located in
@@ -432,17 +527,23 @@ located in
 The handler is invoked by pressing
 .BR Ctrl-x .
 The next key combo is passed as its first argument. Passed via stdin are the
-images to act upon, one path per line: all marked images, if in thumbnail mode
-and at least one image has been marked, otherwise the current image.
-nsxiv(1) will block until the handler terminates. It then checks which images
-have been modified and reloads them.
+images to act upon: all marked images, if in thumbnail mode and at least one
+image has been marked, otherwise the current image. nsxiv(1) will block until
+the handler terminates. It then checks which images have been modified and
+reloads them.
+
+By default nsxiv(1) will send one image per-line to stdin, however when using
+\-0 the image list will be NULL separated and the environment variable
+"$NSXIV_USING_NULL" will be set to 1.
 
 The key combo argument has the following form: "[C-][M-][S-]KEY",
 where C/M/S indicate Ctrl/Meta(Alt)/Shift modifier states and KEY is the X
 keysym as listed in /usr/include/X11/keysymdef.h without the "XK_" prefix.
+If KEY has an uppercase equivalent, S-KEY is resolved into it. For instance,
+K replaces S-k and Scedilla replaces S-scedilla, but S-Delete is sent as-is.
 
 There is also an example script installed together with nsxiv as
-.IR PREFIX/share/nsxiv/exec/key-handler .
+.IR EGPREFIX/key-handler .
 .SH THUMBNAIL CACHING
 nsxiv stores all thumbnails under
 .IR $XDG_CACHE_HOME/nsxiv/ .
@@ -461,12 +562,7 @@ Bert Muennich          <ber.t at posteo.de>
 .EE
 .SH CONTRIBUTORS
 .EX
-Bastien Dejean         <nihilhill at gmail.com>
-Dave Reisner           <d at falconindy.com>
-Fung SzeTat            <sthorde at gmail.com>
-Max Voit               <mvdev at with-eyes.net>
-
-For additional contributors, run `git shortlog -s` in the nsxiv repository.
+For a list of contributors, run `git shortlog -s` in the nsxiv git repository.
 .EE
 .SH HOMEPAGE
 .EX
